Java implementation completed